--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -530,7 +530,7 @@
   top: 0;
 }
 h2.landing-info-h2 {
-  color: #10b981;
+  color: #e2e8f0;
   font-size: 42px;
   width: 120%;
   margin: 0;
